<resources>
    <string name="app_name">AS Password Manager</string>
    <string name="title_home">Password Manager</string>
    <string name="title_password_generator">Password Generator</string>
    <string name="title_settings">Settings</string>
    <string name="title_textview_hint">Title</string>
    <string name="item_text_view_username">Username</string>
    <string name="item_text_view_password">Password</string>
    <string name="item_text_view_website">Website</string>
    <string name="item_text_view_notes">Notes</string>
    <string name="floating_button_info">for adding a new item</string>
    <string name="hint_title">Enter title</string>
    <string name="search_item_title">Search</string>
    <string name="alert_dialog_delete_message">This item will be permanently deleted.</string>
    <string name="alert_dialog_delete_title">Delete Item?</string>
    <string name="info_for_adding_item">Click here to add an item</string>
    <string name="tv_dark_mode">Dark Mode</string>
    <string name="register">Register</string>
    <string name="info_msg_for_setting_password">You need to create Master Password before starting using this app. You can only access this app using Master Password. You can change it later by going to Settings/Change Master Password.</string>
    <string name="password">Password</string>
    <string name="create_master_password">Create Master Password:</string>
    <string name="login">Login</string>
    <string name="tv_change_password">Change Master Password</string>
    <string name="share_feedback">Share Feedback</string>


</resources>