<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_textview_hint"
        style="@style/item_text_view" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_text_view_username"
        style="@style/item_text_view"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_text_view_password"
        style="@style/item_text_view"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_text_view_website"
        style="@style/item_text_view"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_text_view_notes"
        style="@style/item_text_view"/>

</androidx.appcompat.widget.LinearLayoutCompat>