<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.aspasswordmanager.ui.home.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_password_generator"
        android:name="com.example.aspasswordmanager.ui.password_generator.PasswordGeneratorFragment"
        android:label="@string/title_password_generator"
        tools:layout="@layout/fragment_password_generator" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.aspasswordmanager.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>